[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wisvch-dienst2"
version = "1.13"
dependencies = ["django"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''
