dependencies = ["django"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.black]
line-length = 88
preview=true
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.poetry]
name = "dienst2"
version = "0.1.0"
description = ""
authors = ["Joep de Jong"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2,<5.0"
django-environ = "^0.10.0"
whitenoise = "^6.5.0"
django-reversion = "^5.0.4"
django-reversion-compare = "^0.16.2"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
