[tool.black]
line-length = 88
preview=true
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2,<5.0"
django-environ = "^0.10.0"
whitenoise = "^6.5.0"
django-reversion = "^5.0.4"
django-reversion-compare = "^0.16.2"
django-import-export = "^3.2.0"
djangorestframework = "^3.15.2"
django-filter = "^23.2"
django-health-check = "^3.17.0"
django-bootstrap3 = "^23.4"
google-api-python-client = "^2.94.0"
google-auth-oauthlib = "^1.0.0"
drf-writable-nested = "^0.7.0"
django-debug-toolbar = "^4.1.0"
psycopg = {extras = ["binary"], version = "^3.1.9"}
pyupgrade = "^3.9.0"
django-upgrade = "^1.14.0"
google-auth = "^2.22.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
gunicorn = "^23.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
